--- a/SchoolOfDevs/appsettings.json
+++ b/SchoolOfDevs/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefautConnection": "Server=Localhost;Database=SchoolOfDevs;trusted_Connection=True;"
+    "DefaultConnection": "Server=LAPTOP-CQ8RUCFE\\SQLEXPRESS;Database=SchoolOfDevs;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
